--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,8 @@ deploy:
 - type: git
   repo: 
     github: github_bennie:imbennie/bennie.im.git
-    coding: coding_bennie:im_bennie/bennie.im.git
+
+# coding: coding_bennie:im_bennie/bennie.im.git
     
 # Local Search
 search:
