--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Bennie's Blog
 subtitle: ''
-description: 'Everything coms from love.'
+description: 'Everything comes from love.'
 keywords: "Bennie,IMBennie"
 author: Bennie
 language: en
