--- a/_config.next.yml
+++ b/_config.next.yml
@@ -160,7 +160,7 @@ site_state: false
 # Value before `||` delimiter is the target permalink, value after `||` delimiter is the name of Font Awesome icon.
 social:
   GitHub: https://github.com/imbennie || fab fa-github
-  E-Mail: mailto:im@bennie.im || fa fa-envelope
+  E-Mail: mailto:i@bennie.im || fa fa-envelope
   #Weibo: https://weibo.com/yourname || fab fa-weibo
   #Twitter: https://twitter.com/yourname || fab fa-twitter
   #FB Page: https://www.facebook.com/yourname || fab fa-facebook
