--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Bennie's Blog
 subtitle: ''
-description: 'Feeling, thinking, recording and moving forward.' 
+description: 'Life is a journey —— Feel, think, record and move forward.' 
 keywords: "Bennie,IMBennie"
 author: Bennie
 language: en
